WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269386
[WGSL] Validation of array element type is incorrect
https://bugs.webkit.org/show_bug.cgi?id=269386
Summary
[WGSL] Validation of array element type is incorrect
Tadeu Zagallo
Reported
2024-02-14 11:26:33 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-14 11:29:21 PST
<
rdar://problem/122960489
>
Tadeu Zagallo
Comment 2
2024-02-14 11:30:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24436
EWS
Comment 3
2024-02-15 04:46:33 PST
Committed
274718@main
(1b0f8896c4d1): <
https://commits.webkit.org/274718@main
> Reviewed commits have been landed. Closing PR #24436 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug