[WGSL] Validation of array element type is incorrect https://bugs.webkit.org/show_bug.cgi?id=269386 rdar://122960489

Reviewed by Mike Wyrzykowski.

In 274617@main I added a check that array elements must be constructible, but I missed
that this is only the case when constructing an array. For an array type (e.g. x: array<T>)
the element type must only have creation fixed footprint.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):

Canonical link: https://commits.webkit.org/274718@main